--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,9 @@
 UPSTASH_VECTOR_REST_TOKEN=your_upstash_vector_rest_token
 UPSTASH_VECTOR_REST_URL=your_upstash_vector_rest_url
 
+# Upstash Redis (for rate limiting)
+UPSTASH_REDIS_REST_URL=your_upstash_redis_rest_url
+UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
+
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
