--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "@upstash/vector": "^1.2.2",
     "openai": "^6.17.0"
   },
