Refactor API structure to use Hono framework and consolidate endpoints
- Replaced Express setup with Hono for improved API management.
- Merged health and chat endpoints into a single index.ts file.
- Removed deprecated chat.ts and health.ts files.
- Updated vercel.json to route requests to the new index.ts.
- Added hono as a dependency in package.json and bun.lock.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
     "@upstash/vector": "^1.2.2",
+    "hono": "^4.11.7",
     "openai": "^6.17.0"
   },
   "devDependencies": {
