--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/health",
-      "dest": "/api/health"
-    },
-    {
-      "src": "/chat",
-      "dest": "/api/chat"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/api/health"
+      "dest": "/api/index"
     }
   ]
 }
