Update package.json to modify dev script and add local start script
- Changed the 'dev' script to provide a message and exit without running Vercel.
- Introduced a new 'start:local' script for running the API in watch mode using Bun.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "echo 'Run: vercel dev' && exit 0",
+    "start:local": "bun run --watch api/index.ts",
     "build:index": "bun build-vector-index.ts",
     "deploy": "vercel"
   },
