Add local development server for API testing
- Introduced a new `dev-server.ts` file to serve as a local development server using Hono and Bun.
- Updated `package.json` to modify the `dev` script for running the new server.
- Enhanced `vercel.json` to include build configuration for the API.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "echo 'Run: vercel dev' && exit 0",
-    "start:local": "bun run --watch api/index.ts",
+    "dev": "bun run --watch dev-server.ts",
     "build:index": "bun build-vector-index.ts",
     "deploy": "vercel"
   },
