Enhance API with GitHub webhook support and documentation indexing
- Added a new `webhook.ts` file to handle GitHub webhook events for documentation updates.
- Implemented indexing logic in `indexer.ts` to fetch, chunk, and store documentation in Upstash Vector.
- Updated `.env.example` to include `GITHUB_WEBHOOK_SECRET` and `ALLOWED_ORIGINS` for CORS configuration.
- Refactored `dev-server.ts` to improve middleware stack and error handling.
- Modified `package.json` to include a start script for local development.
- Updated `vercel.json` to route requests to the new webhook handler.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
+
+# GitHub Webhook (for docs auto-update)
+# Generate with: openssl rand -hex 32
+GITHUB_WEBHOOK_SECRET=your_github_webhook_secret
+
+# CORS - comma-separated list of allowed origins (leave empty to allow all)
+ALLOWED_ORIGINS=https://yourdomain.com,https://docs.yourdomain.com
