--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^6.17.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.8",
     "@vercel/node": "^5.5.28",
     "typescript": "^5.9.3"
   }
