Refactor Vercel configuration and introduce chat API
- Updated `vercel.json` to change the main API entry point from `api/index.ts` to `api/chat.ts` and added static file handling for the public directory.
- Created a new `chat.ts` file implementing a Hono-based API for RAG-based question answering with streaming responses, including global error handling and custom 404 responses.
- Added favicon and OG image files to the public directory for improved asset management.

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.ts",
+      "src": "api/chat.ts",
       "use": "@vercel/node"
     },
     {
       "src": "api/webhook.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "rewrites": [
@@ -17,8 +21,16 @@
       "destination": "/api/webhook"
     },
     {
+      "source": "/favicon.png",
+      "destination": "/public/favicon.png"
+    },
+    {
+      "source": "/og-image.png",
+      "destination": "/public/og-image.png"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/api/index"
+      "destination": "/api/chat"
     }
   ]
 }
