--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     { "src": "/og-image.png", "dest": "/public/og-image.png" },
     { "handle": "filesystem" },
     { "src": "/api/webhook", "dest": "/api/webhook" },
-    { "src": "/(.*)", "dest": "/api/chat" }
+    { "src": "/api/chat", "dest": "/api" },
+    { "src": "/(.*)", "dest": "/api/" }
   ]
 }
