--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "builds": [
+    { "src": "api/**/*.ts", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
   "routes": [
     { "src": "/favicon.png", "dest": "/public/favicon.png" },
     { "src": "/og-image.png", "dest": "/public/og-image.png" },
