Update Vercel configuration to specify TypeScript files for API endpoints
- Changed the destination for the `/api/webhook` route to point to `webhook.ts` and updated the catch-all route to direct to `index.ts`.
- This adjustment enhances the clarity of the API structure and ensures proper TypeScript handling during deployment.

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     { "src": "/favicon.png", "dest": "/public/favicon.png" },
     { "src": "/og-image.png", "dest": "/public/og-image.png" },
     { "handle": "filesystem" },
-    { "src": "/api/webhook", "dest": "/api/webhook" },
-    { "src": "/(.*)", "dest": "/api/" }
+    { "src": "/api/webhook", "dest": "/api/webhook.ts" },
+    { "src": "/(.*)", "dest": "/api/index.ts" }
   ]
 }
