--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "functions": {
+    "api/*.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  },
   "rewrites": [
     { "source": "/api/webhook", "destination": "/api/webhook" },
     { "source": "/(.*)", "destination": "/api" }
