Refactor Vercel configuration to use rewrites and enable Edge Runtime for API
- Updated `vercel.json` to replace `routes` with `rewrites` for API handling, enhancing clarity.
- Added Edge Runtime configuration to `api/index.ts` and `api/webhook.ts` for improved compatibility with Hono.
- This change optimizes the API's performance and deployment on Vercel.

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "builds": [
-    { "src": "api/*.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/webhook", "dest": "/api/webhook" },
-    { "src": "/(.*)", "dest": "/api" }
+  "rewrites": [
+    { "source": "/api/webhook", "destination": "/api/webhook" },
+    { "source": "/(.*)", "destination": "/api" }
   ]
 }
