Update Vercel configuration to include build command and output directory settings
- Added `buildCommand`, `outputDirectory`, and `framework` fields to `vercel.json` for improved deployment configuration.
- This change enhances the flexibility and clarity of the build process for the API.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "buildCommand": "",
+  "outputDirectory": "",
+  "framework": null,
   "rewrites": [
     { "source": "/api/webhook", "destination": "/api/webhook" },
     { "source": "/(.*)", "destination": "/api" }
