Refactor API structure and add new endpoints for health check and chat functionality
- Removed outdated rewrites from `vercel.json` for a cleaner configuration.
- Refactored `api/index.ts` to streamline the API root endpoint and removed unnecessary error handling.
- Introduced new endpoints: `/api/health` for system status checks and `/api/chat` for RAG-based question answering with streaming responses.
- Implemented CORS middleware and error handling in the new endpoints to enhance security and reliability.

--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,5 @@
   "version": 2,
   "buildCommand": "",
   "outputDirectory": "",
-  "framework": null,
-  "rewrites": [
-    { "source": "/api/webhook", "destination": "/api/webhook" },
-    { "source": "/(.*)", "destination": "/api" }
-  ]
+  "framework": null
 }
