--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "buildCommand": "",
-  "outputDirectory": "",
-  "framework": null
+  "version": 2
 }
