Add model selection feature and update default chat model
- Introduced a model selector in the chat form to allow users to choose from available AI models.
- Updated the default chat model in the environment configuration to 'gpt-4o-mini'.
- Enhanced styling for the model selector to improve user experience.
- Adjusted the chat API to utilize the selected model when processing requests.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
 
+# Default chat model (gpt-5-nano, gpt-4.1-nano, gpt-4o-mini, gpt-5-mini, gpt-5.2)
+DEFAULT_CHAT_MODEL=gpt-4o-mini
+
 # GitHub Webhook (for docs auto-update)
 # Generate with: openssl rand -hex 32
 GITHUB_WEBHOOK_SECRET=your_github_webhook_secret
