--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
 
-# Default chat model (gpt-5-nano, gpt-4.1-nano, gpt-4o-mini, gpt-5-mini, gpt-5.2)
+# Default chat model (gpt-5-nano, gpt-4.1-nano, gpt-4.1-mini, gpt-4o-mini, gpt-5-mini, gpt-5.2)
 DEFAULT_CHAT_MODEL=gpt-4o-mini
 
 # GitHub Webhook (for docs auto-update)
