--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,70 @@
-# Upstash Vector
-UPSTASH_VECTOR_REST_TOKEN=your_upstash_vector_rest_token
-UPSTASH_VECTOR_REST_URL=your_upstash_vector_rest_url
+# =============================================================================
+# OpenClaw Chat API - Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your values.
+# All values marked (required) must be set for the API to function.
+# =============================================================================
 
-# Upstash Redis (for rate limiting)
+# -----------------------------------------------------------------------------
+# UPSTASH VECTOR (required)
+# Used for semantic search / vector embeddings storage
+# Get credentials at: https://console.upstash.com/vector
+# -----------------------------------------------------------------------------
+UPSTASH_VECTOR_REST_URL=your_upstash_vector_rest_url
+UPSTASH_VECTOR_REST_TOKEN=your_upstash_vector_rest_token
+
+# -----------------------------------------------------------------------------
+# UPSTASH REDIS (required)
+# Used for: rate limiting, BM25 index storage, observability data
+# Get credentials at: https://console.upstash.com/redis
+# -----------------------------------------------------------------------------
 UPSTASH_REDIS_REST_URL=your_upstash_redis_rest_url
 UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 
-# OpenAI
+# -----------------------------------------------------------------------------
+# OPENAI (required)
+# Used for: embeddings generation and chat completions
+# Get your API key at: https://platform.openai.com/api-keys
+# -----------------------------------------------------------------------------
 OPENAI_API_KEY=your_openai_api_key
 
-# Default chat model (gpt-5-nano, gpt-4.1-nano, gpt-4.1-mini, gpt-4o-mini, gpt-5-mini, gpt-5.2)
+# Default chat model for responses
+# Options: gpt-5-nano, gpt-4.1-nano, gpt-4.1-mini, gpt-4o-mini, gpt-5-mini, gpt-5.2
 DEFAULT_CHAT_MODEL=gpt-4o-mini
 
-# GitHub Webhook (for docs auto-update)
-# Generate with: openssl rand -hex 32
+# -----------------------------------------------------------------------------
+# COHERE (optional, recommended)
+# Used for: cross-encoder reranking to improve search precision by 10-20%
+# Get your API key at: https://dashboard.cohere.com/api-keys
+# Cost: ~$0.001-0.002 per query
+# -----------------------------------------------------------------------------
+COHERE_API_KEY=your_cohere_api_key
+
+# -----------------------------------------------------------------------------
+# FEATURE FLAGS
+# Control which features are enabled
+# -----------------------------------------------------------------------------
+
+# Enable hybrid search (semantic + BM25 keyword search + Cohere reranking)
+# When false: uses semantic-only search (original behavior)
+# When true: uses multi-strategy retrieval with RRF fusion and reranking
+ENABLE_HYBRID_SEARCH=true
+
+# Enable observability (query logging, feedback collection, analytics)
+# When false: no query data is stored
+# When true: logs queries to Redis for analytics and coverage gap detection
+ENABLE_OBSERVABILITY=true
+
+# -----------------------------------------------------------------------------
+# GITHUB WEBHOOK (optional)
+# Used for: automatic documentation re-indexing on push to main branch
+# Generate secret with: openssl rand -hex 32
+# -----------------------------------------------------------------------------
 GITHUB_WEBHOOK_SECRET=your_github_webhook_secret
 
-# CORS - comma-separated list of allowed origins (leave empty to allow all)
+# -----------------------------------------------------------------------------
+# CORS (optional)
+# Comma-separated list of allowed origins for cross-origin requests
+# Leave empty or omit to use default (https://claw.openknot.ai)
+# -----------------------------------------------------------------------------
 ALLOWED_ORIGINS=https://yourdomain.com,https://docs.yourdomain.com
