--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ OPENAI_API_KEY=your_openai_api_key
 
 # Default chat model for responses
 # Options: gpt-5-nano, gpt-4.1-nano, gpt-4.1-mini, gpt-4o-mini, gpt-5-mini, gpt-5.2
-DEFAULT_CHAT_MODEL=gpt-4o-mini
+DEFAULT_CHAT_MODEL=gpt-4.1-mini
 
 # -----------------------------------------------------------------------------
 # COHERE (optional, recommended)
