--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,8 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 OPENAI_API_KEY=your_openai_api_key
 
 # Default chat model for responses
-# Options: gpt-5-nano, gpt-4.1-nano, gpt-4.1-mini, gpt-4o-mini, gpt-5-mini, gpt-5.2
-DEFAULT_CHAT_MODEL=gpt-4.1-mini
+# Options: gpt-5-nano, gpt-5-mini, gpt-5, gpt-5.1, gpt-5.2
+DEFAULT_CHAT_MODEL=gpt-5.2
 
 # -----------------------------------------------------------------------------
 # COHERE (optional, recommended)
