--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "openclaw-chat-api",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "private": true,
   "description": "RAG-based docs chat API for OpenClaw documentation",
-  "author": "OpenKnot AI <val@openknot.ai>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/OpenKnots/openclaw-chat-api.git"
+    "url": "https://github.com/OpenKnot/openclaw-chat-api.git"
   },
   "bugs": {
-    "url": "https://github.com/OpenKnots/openclaw-chat-api/issues"
+    "url": "https://github.com/OpenKnot/openclaw-chat-api/issues"
   },
   "scripts": {
     "bdev": "next build && next dev",
@@ -18,7 +17,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:index": "bun build-vector-index.ts",
+    "build:index": "bun scripts/build-vector-index.ts",
     "deploy": "vercel"
   },
   "dependencies": {
@@ -27,10 +26,14 @@
     "@upstash/vector": "^1.2.2",
     "@vercel/analytics": "^1.6.1",
     "next": "^16.1.6",
-    "openai": "^6.18.0",
+    "openai": "^6.22.0",
+    "@create-markdown/core": "^0.1.0",
+    "@create-markdown/react": "^0.1.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-markdown": "^10.1.0"
+    "react-dom": "^19.2.4"
+  },
+  "overrides": {
+    "@create-markdown/core": "^0.1.0"
   },
   "devDependencies": {
     "@types/bun": "^1.3.8",
@@ -38,5 +41,8 @@
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "typescript": "^5.9.3"
+  },
+  "patchedDependencies": {
+    "@create-markdown/react@0.1.0": "patches/@create-markdown%2Freact@0.1.0.patch"
   }
 }
